--- a/config/images.yml
+++ b/config/images.yml
@@ -32,5 +32,11 @@
   url: 'http://farm6.staticflickr.com/5458/9546757410_b7b37a0417_k.jpg'
   credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
+  url: 'http://farm5.staticflickr.com/4086/5045134065_d56a49949f_o.jpg'
+  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+-
+  url: 'http://farm5.staticflickr.com/4148/5024991641_2f544b38a6_o.jpg'
+  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+-
   url: 'http://farm8.staticflickr.com/7236/7304720350_0c64e0c6d6_h.jpg'
   credits: <a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/cobaltfish/">cobaltfish</a>'
