Use entypo icons fixes #14

--- a/config/images.yml
+++ b/config/images.yml
@@ -1,42 +1,42 @@
 -
   url: 'http://farm5.staticflickr.com/4113/5078240014_cf747d41ef_o.jpg'
-  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
   url: 'http://farm5.staticflickr.com/4113/5078240014_cf747d41ef_o.jpg'
-  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
   url: 'http://farm5.staticflickr.com/4019/5078240448_b908bbb89e_o.jpg'
-  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
   url: 'http://farm5.staticflickr.com/4113/5078240014_cf747d41ef_o.jpg'
-  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
   url: 'http://farm5.staticflickr.com/4019/5078240448_b908bbb89e_o.jpg'
-  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
   url: 'http://farm8.staticflickr.com/7165/6459391267_d97502c4f7_o.jpg'
-  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
   url: 'http://farm9.staticflickr.com/8244/8651612579_8c0e4dede7_k.jpg'
-  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
   url: 'http://farm5.staticflickr.com/4108/5077645173_afc0c0a6c3_o.jpg'
-  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
   url: 'http://farm5.staticflickr.com/4089/5191751684_f6d177b2a0_o.jpg'
-  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
   url: 'http://farm5.staticflickr.com/4084/5033107024_b2307df42b_o.jpg'
-  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
   url: 'http://farm6.staticflickr.com/5458/9546757410_b7b37a0417_k.jpg'
-  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
   url: 'http://farm5.staticflickr.com/4086/5045134065_d56a49949f_o.jpg'
-  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
   url: 'http://farm5.staticflickr.com/4148/5024991641_2f544b38a6_o.jpg'
-  credits: '<a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/halfrain/">halfrain</a>'
 -
   url: 'http://farm8.staticflickr.com/7236/7304720350_0c64e0c6d6_h.jpg'
-  credits: <a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">cc-by-sa</a> by <a href="http://www.flickr.com/photos/cobaltfish/">cobaltfish</a>'
+  credits: '<a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><span class="entypo-cc"></span><span class="entypo-cc-by"><span class="entypo-cc-sa"></span> </span></a> <a target="_blank" href="http://www.flickr.com/photos/cobaltfish/">cobaltfish</a>'
