--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,12 @@ spec/reports
 test/tmp
 test/version_tmp
 tmp
+node_modules
 
 # YARD artifacts
 .yardoc
 _yardoc
 doc/
+
+# Build in static folder
+static/build
